README: correction of the data impoertation code

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,9 +1,9 @@
 ---
-title: "Modèles linéaires (généralisés) appliuqués à la biométrie humaine"
+title: "Modèles linéaires (généralisés) appliqués à la biométrie humaine"
 output: github_document
 ---
 
-<!--- do not edit readme.md ---->
+<!-- do not edit readme.md -->
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Avant-propos
 
-Cette séance d'exercices est suceptible d'être adaptée. N'hésitez pas à vérifier le lien suivant afin de voir si des modifications n'ont pas été apportées dans les consignes : https://github.com/BioDataScience-Course/B03Gb_human
+Cette séance d'exercices est susceptible d'être adaptée. N'hésitez pas à vérifier le lien suivant afin de voir si des modifications n'ont pas été apportées dans les consignes : https://github.com/BioDataScience-Course/B03Gb_human
 
 ## Contexte 
 
@@ -19,11 +19,9 @@ Dans le cadre du cours de **science des données biologique I**, vous avez été
 
 Étant donné que vous avez été des scientifiques consciencieux, vous avez collecté vos données en y associant des métadonnées.
 
-Les données ont été collectées via un document GoogleSheet à l'adresse suivante : https://docs.google.com/spreadsheets/d/1GJAGWjwNBtEGqQXqFcNxkrwcw-5n-gqwmiGAzxUZrxg/edit?usp=sharing
+Les données sont téléchargeables au fomat CSV via : https://docs.google.com/spreadsheets/d/e/2PACX-1vSfY7b0ICF64uv9vIYi8Jg38Rw3pKvLHC5TW0XOZYVQ4ce2dTmXGM5Cm8J922MsYm_fk75DKOK2wC4b/pub?output=csv
 
 Les métadonnées associées aux données ont été recensées dans un document GoogleDoc : https://docs.google.com/spreadsheets/d/1j55bB9YEAVbS4eRE-i6L-NEYhHXua-dxs-aQr_qko7k/edit?usp=sharing
-
-Les données sont téléchargeables au fomat CSV via : https://docs.google.com/spreadsheets/d/e/2PACX-1vSfY7b0ICF64uv9vIYi8Jg38Rw3pKvLHC5TW0XOZYVQ4ce2dTmXGM5Cm8J922MsYm_fk75DKOK2wC4b/pub?output=csv
 
 ## Consignes
 
@@ -36,7 +34,8 @@ Dans un script R nommé `biometry.R` :
 - Importez vos données 
 
 ```{r, message=FALSE}
-biometry <- readr::read_csv("https://docs.google.com/spreadsheets/d/e/2PACX-1vSfY7b0ICF64uv9vIYi8Jg38Rw3pKvLHC5TW0XOZYVQ4ce2dTmXGM5Cm8J922MsYm_fk75DKOK2wC4b/pub?output=csv", locale = readr::locale(decimal_mark = ","))
+SciViews::R
+biometry <- read$csv("https://docs.google.com/spreadsheets/d/e/2PACX-1vSfY7b0ICF64uv9vIYi8Jg38Rw3pKvLHC5TW0XOZYVQ4ce2dTmXGM5Cm8J922MsYm_fk75DKOK2wC4b/pub?output=csv")
 ```
 
 - Ajoutez les labels à vos variables. (vous pouvez utiliser par exemple la fonction `labelise()`).
